@@ -1,3 +1,8 @@
+bloonix-server (0.36) released at 2015-09-01
+
+    * Added field force_event to table service.
+    * The server disconnects now if the db schema version changed.
+
 bloonix-server (0.35) released at 2015-08-31
 
     * Fixed: try to prevent ntp issues by calculating the next service check.
